# medical_crm

./: .gitignore  docker-compose.yml  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/routers/: api.py
backend/app/stores/: crud.py  database.py  models.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 245c35efb2e5_update_medical_records.py  996ec3172118_initial_migration.py  a0943fe0d1cc_add_patient_id_to_schedule.py  dbaf8f3473f9_initial_migration.py  f5e2f65f6c00_add_search_vector_to_patient.py  f81279fc0ad7_add_fks.py  ffc651771ad5_initial_migration.py
frontend/: .prettierrc  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/api/: createAdmin.ts  createConsultation.ts  createDoctor.ts  createSchedule.ts  createUser.ts  editAdmin.ts  editDoctor.ts  fetchAdmin.ts  fetchDoctor.ts
frontend/src/components/: AccountInfo.css  AccountInfo.jsx  ProtectedRoute.jsx  UserInfoBar.tsx  useUser.tsx
frontend/src/components/AdministratorBase/: index.tsx
frontend/src/components/DoctorBase/: index.tsx  style.css
frontend/src/components/EditAdmin/: index.tsx  schema.ts
frontend/src/components/EditDoctor/: index.tsx  schema.ts
frontend/src/pages/: App.jsx  App.tsx
frontend/src/shared/: Avatar.tsx  DatePickerForm.tsx  DoctorInput.tsx  ErrorMessage.tsx  FormItem.tsx  FormItems.tsx  PatientInput.tsx  Tabs.tsx  TimeFieldForm.tsx  createISO.ts  patterns.ts  printer.ts  roles.ts
(+75 files in other folders)
