[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.2"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.31.1"
alembic = "^1.13.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
